--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,198 @@
-@use 'variables';
+@use 'variables' as vars;
 
 .App {
-	padding: 40px;
-	background-color: variables.$grey;
+	width: 100%;
+	height: 100vh;
+	background-color: vars.$light-grey;
+	display: flex;
+	flex-direction: row;
+
+	& .left-main-container {
+		width: 40%;
+		height: 100%;
+		border-right: vars.$borders;
+		margin: auto;
+
+		& .left-top-container {
+			display: flex;
+			flex-direction: column;
+			height: 150px;
+			border-bottom: vars.$borders;
+			padding-top: 2vh;
+			padding-left: 2vw;
+			background-color: vars.$grey;
+
+			& .user-container {
+				// padding-left: 20px;
+				padding-bottom: 2vh;
+				padding-left: 2vw;
+
+				& .user-img {
+					width: 50px;
+					height: 50px;
+					border-radius: 50%;
+					background-color: vars.$borders-color;
+				}
+			}
+			& .searchbar {
+				border-radius: 30px;
+				width: 90%;
+				border: vars.$borders;
+				height: 5vh;
+				align-self: center;
+			}
+		}
+
+		& .left-bottom-container {
+			background-color: vars.$light-grey;
+			padding-left: 2vw;
+
+			& .chats-title {
+				color: vars.$light-blue;
+				text-transform: capitalize;
+				font-size: 30px;
+				padding: 30px 0;
+			}
+			& .chats-contacts {
+				height: 60vh;
+				font-size: 20px;
+
+				& .contact-container {
+					position: relative;
+					cursor: pointer;
+					display: flex;
+					flex-direction: row;
+					flex-wrap: wrap;
+					// justify-content: space-between;
+					color: vars.$dark;
+					align-items: flex-start;
+
+					& .contact-image {
+						@include vars.contact-image;
+					}
+
+					& .contact-right-container {
+						& .contact-name {
+							margin: 0;
+						}
+						& .contact-last-msg-date {
+							margin: 0;
+							margin-right: 2vw;
+							font-size: 15px;
+							position: absolute;
+							right: 0;
+							top: 0;
+							z-index: 2;
+							border-radius: 20px;
+							// background-color: #fafafa;
+							box-shadow: inset -1px 1px 1px 90px #fafafa;
+						}
+
+						& .contact-latest-msg {
+							margin: 0;
+							color: vars.$text-dark;
+							font-size: 15px;
+							margin-top: 5px;
+						}
+					}
+				}
+			}
+		}
+	}
+	& .right-main-container {
+		width: 60%;
+		height: 100%;
+
+		& .right-top-container {
+			border-bottom: vars.$borders;
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			padding: 2vw;
+
+			& .title-contact-name {
+				margin: 0;
+				font-weight: 300;
+				margin-left: 2vw;
+			}
+
+			& .active-contact-image {
+				@extend .contact-image;
+				border-radius: 50%;
+				width: 40px;
+				height: 40px;
+			}
+		}
+		& .right-middle-container {
+			border-bottom: vars.$borders;
+			height: 70vh;
+			position: relative;
+			overflow-y: scroll;
+
+			& .message-container-lt {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: flex-start;
+				position: relative;
+				right: 0;
+				left: 0;
+			}
+			& .message-container-rt {
+				@extend .message-container-lt;
+				align-items: flex-end;
+			}
+			& .message-inner-container {
+				display: flex;
+				flex-direction: row;
+				padding: 5%;
+				text-align: center;
+
+				& .contact-image {
+					@include vars.contact-image;
+				}
+
+				& .contact-msg-text-dark {
+					margin: 0;
+					font-weight: 300;
+					background-color: vars.$dark;
+					color: #fff;
+					padding: 12px 10px;
+					border-radius: 30px;
+				}
+				& .contact-msg-text-light {
+					@extend .contact-msg-text-dark;
+					background-color: vars.$grey;
+					color: vars.$dark;
+				}
+				& .contact-msg-date-time {
+					margin: 0;
+					align-items: flex-end;
+					font-size: 10px;
+					text-align: left;
+					margin-top: 10px;
+					color: vars.$text-dark;
+				}
+			}
+		}
+
+		& .right-bottom-container {
+			display: flex;
+			height: 10vh;
+			margin-top: 2vh;
+			// border: 1px solid red;
+
+			& .msg-box {
+				margin: auto;
+				font-weight: 300;
+				width: 50vw;
+				height: 7vh;
+				align-self: center;
+				border-radius: 20px;
+				border: vars.$borders;
+				border-width: 1px;
+				padding-left: 20px;
+			}
+		}
+	}
 }
