Added search functionality with more styling

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -7,7 +7,7 @@ $subtext: #cbcbcb;
 $text-light: #a9b0af;
 $text-dark: #a8a49d;
 $light-blue: #49b8dc;
-$borders-color: #e9e9e9;
+$borders-color: #e0dfdf;
 
 //properties
 $borders: 2px solid $borders-color;
