--- a/src/App.scss
+++ b/src/App.scss
@@ -19,13 +19,12 @@
 			height: 150px;
 			border-bottom: vars.$borders;
 			padding-top: 2vh;
-			padding-left: 2vw;
 			background-color: vars.$grey;
 
 			& .user-container {
 				// padding-left: 20px;
 				padding-bottom: 2vh;
-				padding-left: 2vw;
+				margin-left: 2vw;
 
 				& .user-img {
 					width: 50px;
@@ -36,22 +35,25 @@
 			}
 			& .searchbar {
 				border-radius: 30px;
-				width: 90%;
+				width: 85%;
 				border: vars.$borders;
 				height: 5vh;
 				align-self: center;
+				background-color: vars.$white;
+				padding-left: 20px;
+				padding-right: 20px;
 			}
 		}
 
 		& .left-bottom-container {
 			background-color: vars.$light-grey;
-			padding-left: 2vw;
 
 			& .chats-title {
 				color: vars.$light-blue;
 				text-transform: capitalize;
 				font-size: 30px;
 				padding: 30px 0;
+				padding-left: 2vw;
 			}
 			& .chats-contacts {
 				height: 60vh;
@@ -63,9 +65,12 @@
 					display: flex;
 					flex-direction: row;
 					flex-wrap: wrap;
-					// justify-content: space-between;
 					color: vars.$dark;
 					align-items: flex-start;
+					margin-top: 30px;
+					padding-bottom: 30px;
+					border-bottom: vars.$borders;
+					padding-left: 2vw;
 
 					& .contact-image {
 						@include vars.contact-image;
@@ -84,7 +89,6 @@
 							top: 0;
 							z-index: 2;
 							border-radius: 20px;
-							// background-color: #fafafa;
 							box-shadow: inset -1px 1px 1px 90px #fafafa;
 						}
 
@@ -109,6 +113,7 @@
 			flex-direction: row;
 			align-items: center;
 			padding: 2vw;
+			background-color: vars.$grey;
 
 			& .title-contact-name {
 				margin: 0;
@@ -128,6 +133,7 @@
 			height: 70vh;
 			position: relative;
 			overflow-y: scroll;
+			background-color: vars.$light-grey;
 
 			& .message-container-lt {
 				display: flex;
@@ -156,13 +162,15 @@
 					margin: 0;
 					font-weight: 300;
 					background-color: vars.$dark;
-					color: #fff;
+					color: vars.$white;
 					padding: 12px 10px;
 					border-radius: 30px;
 				}
 				& .contact-msg-text-light {
 					@extend .contact-msg-text-dark;
-					background-color: vars.$grey;
+					// background-color: vars.$grey;
+					background-color: #e0e0e0;
+
 					color: vars.$dark;
 				}
 				& .contact-msg-date-time {
@@ -192,6 +200,8 @@
 				border: vars.$borders;
 				border-width: 1px;
 				padding-left: 20px;
+				padding-right: 20px;
+				background-color: vars.$white;
 			}
 		}
 	}
