--- a/src/App.scss
+++ b/src/App.scss
@@ -25,12 +25,25 @@
 				// padding-left: 20px;
 				padding-bottom: 2vh;
 				margin-left: 2vw;
+				// position: relative;
+				display: flex;
 
 				& .user-img {
 					width: 50px;
 					height: 50px;
 					border-radius: 50%;
 					background-color: vars.$borders-color;
+				}
+				& .fb-login {
+					width: 100px;
+					background-color: vars.$light-blue;
+					border: none;
+					border-radius: 30px;
+					margin-left: 40px;
+					color: vars.$white;
+					font-weight: 700;
+					line-height: 1.5rem;
+					cursor: pointer;
 				}
 			}
 			& .searchbar {
