--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,7 @@
 				// padding-left: 20px;
 				padding-bottom: 2vh;
 				margin-left: 2vw;
-				// position: relative;
+				position: relative;
 				display: flex;
 
 				& .user-img {
@@ -33,6 +33,11 @@
 					height: 50px;
 					border-radius: 50%;
 					background-color: vars.$borders-color;
+				}
+				& .check-mark {
+					position: absolute;
+					bottom: 0.7vh;
+					left: 3.5vw;
 				}
 				& .fb-login {
 					width: 100px;
@@ -87,6 +92,11 @@
 
 					& .contact-image {
 						@include vars.contact-image;
+					}
+					& .check-mark {
+						position: absolute;
+						top: 3vh;
+						left: 4vw;
 					}
 
 					& .contact-right-container {
