--- a/src/App.scss
+++ b/src/App.scss
@@ -28,16 +28,19 @@
 				position: relative;
 				display: flex;
 
-				& .user-img {
-					width: 50px;
-					height: 50px;
-					border-radius: 50%;
-					background-color: vars.$borders-color;
-				}
-				& .check-mark {
-					position: absolute;
-					bottom: 0.7vh;
-					left: 3.5vw;
+				& .user-image-container {
+					display: flex;
+					& .user-img {
+						width: 50px;
+						height: 50px;
+						border-radius: 50%;
+						background-color: vars.$borders-color;
+					}
+					& .check-mark-user {
+						position: absolute;
+						bottom: 1.7vh;
+						left: 2.5vw;
+					}
 				}
 				& .fb-login {
 					width: 100px;
@@ -89,19 +92,23 @@
 					padding-bottom: 30px;
 					border-bottom: vars.$borders;
 					padding-left: 2vw;
-
-					& .contact-image {
-						@include vars.contact-image;
-					}
-					& .check-mark {
-						position: absolute;
-						top: 3vh;
-						left: 4vw;
+					& .contact-image-container {
+						display: flex;
+						& .contact-image {
+							@include vars.contact-image;
+						}
+						& .check-mark-contact {
+							position: absolute;
+							top: 17px;
+							left: 55px;
+						}
 					}
 
 					& .contact-right-container {
 						display: flex;
 						flex-direction: column;
+						margin-left: 15px;
+
 						& .contact-name {
 							margin: 0;
 						}
@@ -122,7 +129,7 @@
 							color: vars.$text-dark;
 							font-size: 15px;
 							margin-top: 5px;
-							width: 70%;
+							width: 100%;
 							text-align: justify;
 							// word-wrap: break-word;
 						}
